started kaiba corp landing pg

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/72db77ba9a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>	
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <title>Lawrence Clemente's Portfolio</title>
   </head>
