--- a/index.html
+++ b/index.html
@@ -42,4 +42,9 @@
       })();
     </script>
   </body>
+  <!--
+    
+react router tutorial
+https://medium.com/@galohernandez/vite-react-react-router-dom-the-latest-way-312ee887197e
+  -->
 </html>
